[package]
name = "rfm69-rs-examples-rp2040"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transmitter"
path = "src/transmitter.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"



[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1",  features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt" ] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0",  features = ["rp2040","defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"

rfm69-rs = { path = "../../rfm69-rs" }

[profile.release]
debug = true

# [profile.dev]
# lto = true
# opt-level = "z"
